@@ -3,6 +3,9 @@ next version
 
 - implemented internal push operation between devpi indexes
 
+- pushing releases to pypi.python.org will now correctly 
+  report the filetype/pyversion in the metadata.
+
 - add setting of acl_upload for indexes.   Only the owning
   user and acl_upload users may upload releases, files 
   or documentation to an index.
